more platform compatibility fixes, minimum system updates